syntax = "proto3";

package com.devinrsmith;

option java_package = "com.devinrsmith.grpcchunks";
option java_multiple_files = true;

message Request {
  int32 chunk_size = 1;
  int64 num_chunks = 2;
}

message Chunk {
  bytes part = 1;
}

service TheService {
  rpc ServerStreaming(Request) returns (stream Chunk);
}